fix: files warnings